--- a/client/wxapp/common/css/common.wxss
+++ b/client/wxapp/common/css/common.wxss
@@ -194,6 +194,9 @@ button.button-hover {background-color: transparent;}
   100%{ transform: translateY(0);}
 }
 
+.color1{color: #343434;}
+.color2{color: #7d7d7d;}
+.color3{color: #e7645c;}
 
 
 
