--- a/client/wxapp/components/login/login.wxml
+++ b/client/wxapp/components/login/login.wxml
@@ -1,29 +1,37 @@
 <!--components/login/login.wxml-->
-<view class="login {{getInfo}} fadeIn2" wx:if="{{showLogin}}" catchtouchmove="true" >
-  <view class="box">
-    <view class="userinfoBox">
-      <view class="avatarImg">
-        <image src="/images/share.jpg"></image>
-        <open-data type="userAvatarUrl"></open-data>
-      </view>
-      <view class="nickName">您好，<open-data type="userNickName"></open-data></view>
-      <view class="tipsTxt tipsTxt1">为了您的账号安全，请允许获取您的手机号码</view>
-      <view class="tipsTxt tipsTxt2">为了您的账号安全，请允许获取您的昵称和头像</view>
-    </view>
-    <view class="BtnBox btnNumber">
-      <button class="phoneBox" open-type="getPhoneNumber" bindgetphonenumber="getAuth" data-auth='getPhoneNumber'>
-        <text class="iconfont icon_wx"/>
-        <text class="wxLogin">微信手机号一键绑定</text>
-      </button>
-      <view class="tipsTxtOther" catchtap="otherPhone">使用其他手机号</view>
-    </view>
-    <view class="BtnBox btnAuth">
-      <button class="phoneBox" open-type="getUserInfo" lang="zh_CN"  bindgetuserinfo="getAuth" data-auth='getUserInfo'>
-        <text class="iconfont icon_wx"/>
-        <text class="wxLogin">微信昵称一键获取</text>
-      </button>
-      <view class="tipsTxtOther" catchtap="otherPhone">使用其他手机号</view>
-    </view>
-  </view>
+<view class="login {{getInfo}} fadeIn2" wx:if="{{showLogin}}" catchtouchmove="true">
+	<view class="box">
+		<view class="userinfoBox" hidden="{{true}}">
+			<view class="avatarImg">
+				<image src="/images/share.jpg"></image>
+				<open-data type="userAvatarUrl"></open-data>
+			</view>
+			<view class="nickName">您好，<open-data type="userNickName"></open-data>
+			</view>
+			<view class="tipsTxt tipsTxt1">为了您的账号安全，请允许获取您的手机号码</view>
+			<view class="tipsTxt tipsTxt2">为了您的账号安全，请允许获取您的昵称和头像</view>
+		</view>
+		<view class="footer">
+			<image class="logo" src='/images/common/logo.png'></image>
+			<view class="title title1 color1">欢迎登录嘬一口～</view>
+			<view class="title title2 color2">登录后消费可获取积分，享受更好的服务体验。</view>
+			<view class="BtnBox btnNumber">
+				<view class="phoneBox">
+					<text class="iconfont icon_wx"/>
+        <text class="wxLogin">微信一键绑定</text>
+				</view>
+				<button class="btnPhoneBox" open-type="getPhoneNumber" bindgetphonenumber="getAuth" data-auth='getPhoneNumber'>
+				</button>
+				<view class="tipsTxtOther" catchtap="otherPhone">使用其他手机号</view>
+			</view>
+			<view class="BtnBox btnAuth">
+				<button class="phoneBox" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="getAuth" data-auth='getUserInfo'>
+					<text class="iconfont icon_wx"/>
+        <text class="wxLogin">微信一键绑定</text>
+				</button>
+				<view class="tipsTxtOther" catchtap="otherPhone">使用其他手机号</view>
+			</view>
+		</view>
+	</view>
 
 </view>
