--- a/client/wxapp/components/login/login.wxss
+++ b/client/wxapp/components/login/login.wxss
@@ -1,8 +1,9 @@
 /* components/login/login.wxss */
 @import '../../app.wxss';
-.login{position: absolute;width: 100%;height: 100%;left: 0;top: 0;z-index: 10;background-color: #fff;}
+.login{position: absolute;width: 100%;height: 100%;left: 0;top: 0;z-index: 10;background-color: rgba(0,0,0,0.2);}
 
-.box {position: absolute;top: 264rpx;left: 50%;transform: translateX(-50%);text-align: center;}
+/* .box {position: absolute;top: 264rpx;left: 50%;transform: translateX(-50%);text-align: center;} */
+.box{width: 100%;height: 100%;}
 
 .userinfoBox {margin-bottom: 210rpx;}
 .userinfoBox .avatarImg {width: 150rpx;height: 150rpx;border-radius: 50%;overflow: hidden;margin: 0 auto 43rpx;}
@@ -11,11 +12,33 @@
 .userinfoBox .tipsTxt {font-size: 28rpx;color: #a5a5a5;display: none;}
 
 .BtnBox{display: none;}
-.BtnBox .phoneBox {width: 670rpx;height: 94rpx;background-color: #d3aa79;color: #fff;margin: 0;font-size: 32rpx;}
-.BtnBox .phoneBox .icon_wx {display: inline-block;width: 26rpx;height: 26rpx;color: #fff;font-size: 36rpx;margin-right: 20rpx;}
+.BtnBox .phoneBox {width: 100%;height: 61rpx;text-align: center; background-color: #e7645c;color: #fff;margin: 0;font-size: 25.68rpx;}
+.BtnBox .phoneBox .icon_wx {display: inline-block;width: 26rpx;height: 26rpx;color: #fff;font-size: 36rpx;margin-right: 20rpx;position: relative;top: 7rpx;}
+.BtnBox .phoneBox .wxLogin{display: inline-block;height: 100%;line-height: 62rpx;}
 .BtnBox .tipsTxtOther {margin-top: 30rpx;font-size: 26rpx;color: #c89457;padding: 20rpx;display: none;}
+.BtnBox .btnPhoneBox{position: absolute;top: 0;left: 0;opacity: 0;width: 100%;height: 100%;}
+
 
 .getNumber .btnNumber{display: block;}
 .getInfo .btnAuth{display: block;}
 .getNumber .tipsTxt1{display: block;}
 .getInfo .tipsTxt2{display: block;}
+
+.footer{width: 100%;height: 418rpx;position: absolute;left: 0;bottom: 0;background-color: #fff;animation: ani_closingTime 0.5s 0.2s linear both;}
+.footer .logo{width: 247rpx;height: 208rpx;position: absolute;top: -150rpx;left: 30rpx;}
+.footer .title{width:554rpx;margin: 0 auto;}
+.footer .title1{font-size: 41.86rpx;margin-top: 85rpx;margin-bottom: 15rpx;}
+.footer .title2{font-size: 18rpx;margin-bottom: 70rpx;}
+.footer .BtnBox{margin: 0 auto;width: 554rpx;}
+
+
+
+
+
+
+
+
+@keyframes ani_closingTime{
+  0%{ transform: translateY(600rpx);}
+  100%{ transform: translateY(0);}
+}
