--- a/client/wxapp/components/home/home.wxml
+++ b/client/wxapp/components/home/home.wxml
@@ -1,179 +1,193 @@
 <import src="/pages/temp/temp.wxml" />
 <view class='conBox'>
-  <view class="home">
-    <!-- 门店信息 -->
-    <view class="guide {{showMore ? 'fullPageInfo' :''}}">
-      <view class="guideTop">
-        <view class="guideTopLeft" catchtap="goStoreList">
-          <text class="iconfont icon_star_empty"></text>
-          <text class="storeName">{{commercialName}}</text>
-          <text>></text>
-        </view>
-        <view class="guideTopRight">
-          <switchWithText width="160" height="60" activeText="自提" inactiveText="外卖" checked="{{checked}}" bind:changeChecked="changeChecked"></switchWithText>
-        </view>
-      </view>
-      <view class="distance">距离您{{distance}}km</view>
-      <view class="storeIntro">
-        <view class="storeDetails {{showMore ? 'hideDetail' : ''}}">
-          <!-- <text class="iconfont icon_light_bulb"></text> -->
-          <image class="icon_info" src="/images/tabBar/icon_info.png"></image>
-          <view class="oneHide">{{commercialDesc}}</view>
-        </view>
-        <view class="moreTxt" bindtap="showMoreDetail">
-          <text>{{detailBtnTxt}}</text>
-          <text class="iconfont icon-arrow-down {{showMore ? 'active' : ''}}"></text>
-        </view>
-      </view>
-      <view class="openStoreDetail {{showMore ? 'showDetail' : ''}}">
-        <view class="storeDetails">
-          <!-- <text class="iconfont icon_light_bulb"></text> -->
-          <view>{{commercialDesc}}</view>
-        </view>
-        <view class="storeDetailsTitle">配送</view>
-        <view>
-          <view>满30起送</view>
-        </view>
-      </view>
-    </view>
-    <view class="dishList" id="dishList">
-      <scroll-view scroll-y class="categoryList">
-        <view class="{{item.id === activeId ? 'active categoryItem' : 'categoryItem'}}" wx:for="{{dishMenuList}}" wx:key="id" bindtap="selectCategory" data-id="{{item.id}}" data-ac="{{activeId}}">
-          <!-- <text class="iconfont icon_light_bulb"></text> -->
-          <text>{{item.name}}</text>
-        </view>
-      </scroll-view>
-      <scroll-view scroll-y class="detailsList" scroll-into-view="{{scrollId}}" scroll-with-animation bindscroll="bindscroll">
-        <view wx:for="{{dishMenuList}}" wx:key="id" wx:for-index="pIndex" id="{{'dish' + item.id}}" class="dishMenuContent">
-          <view class="dishMenuItemTitle">{{item.name}}</view>
-          <view wx:for="{{item.foodList}}" wx:key="id" wx:for-item="childItem" class="dishMenuItem" catchtap="selectConfigMore" data-item="{{childItem}}">
-            <view class="img">
-              <image src="{{childItem.foodCover}}"></image>
-            </view>
-            <view class="dishDetails">
-              <view class="dishDetailsTitle">{{childItem.foodTitle}}</view>
-              <view class="dishDetailsSubTitle">{{childItem.foodDesc}}</view>
-              <view class="operate">
-                <text class="price">￥{{childItem.specs[0].originPrice}}</text>
-                <text class="selectCateInfo" wx:if="{{childItem.specs.length >= 1 && childItem.propertiesDto.length>=1}}" catchtap="onSelectConfigMore" data-item="{{childItem}}" data-parentIndex="{{pIndex}}">选规格</text>
-                <text class="iconfont icon_add_cir selectCate" wx:else catchtap="onSelectConfigMore" data-item="{{childItem}}" data-parentIndex="{{pIndex}}"></text>
-              </view>
-            </view>
-          </view>
-        </view>
-        <view class="catogoryBottom"></view>
-      </scroll-view>
-    </view>
-    <!-- 购物车信息 -->
-    <view class="cardMask" wx:if="{{cardMaskShow}}" bindtap="showCardDetail">
-      <view class="cardDetailContent">
-        <view class="cardDetail">
-          <text class="iconfont icon_delete"></text>
-          <text bindtap="clearCar">清空购物车</text>
-        </view>
-        <view class="cardDetailList">
-          <view wx:for="{{cardList}}" wx:key="index" class="cardDetailListCard">
-            <view class="cardDetailListCardLeft">
-              <view>{{item.foodTitle}}</view>
-              <view>{{item.foodProperties}}</view>
-            </view>
-            <view class="cardDetailListCardRight">
-              <text>￥{{item.price}}</text>
-              <text>数量: {{item.buyNum}}</text>
-            </view>
-          </view>
-        </view>
-      </view>
-    </view>
-    <view class="cardList {{cardList.length > 0 ? 'show' : ''}}">
-      <view class="cardListLeft">
-        <view class="selectNum" bindtap="showCardDetail">
-          <image class="selectNumImg" src="{{cardList[0].foodCover}}" mode="aspectFill"></image>
-          <text class="number" wx:if="{{cardList.length > 0}}">{{selectInfo.total}}</text>
-        </view>
-        <view class="totalPrice">￥{{selectInfo.totalPrice}}</view>
-      </view>
-      <view class="cardListRight" bindtap="orderSettle">结算</view>
-    </view>
-  </view>
-  <!-- 规格模态框 -->
-  <view class="modal {{showModal ? 'showModal' : ''}}">
-    <view class="mask" bindtap="closeModal"></view>
-    <view class="modalView">
-      <view wx:if="{{!modalData.imgList}}" style="width: 100%;padding: 40rpx;box-sizing: border-box;">
-        <view style="width: 100%;">
-          <skeleton height="{{378}}"></skeleton>
-        </view>
-        <view style="width: 100%;margin-top: 30rpx;">
-          <skeleton row="{{3}}"></skeleton>
-        </view>
-      </view>
-      <block wx:else>
-        <view class="modalOperate">
-          <text class="iconfont icon_share"></text>
-          <text class="iconfont icon_close" bindtap="closeModal"></text>
-          <button class="button" open-type="share">分享</button>
-        </view>
-        <view class="position">{{current + 1}} / {{modalData.imgList.length}}</view>
-        <view class="modelContentShow">
-          <swiper bindchange="swprerChange">
-            <block wx:for="{{[modalData.foodCover]}}" wx:key="index">
-              <swiper-item>
-                <image src="{{item}}" mode="aspectFill"></image>
-              </swiper-item>
-            </block>
-          </swiper>
-          <view class="scrollView">
-            <scroll-view scroll-y>
-              <view class="scrollViewBox">
-                <view class="modalTitle">{{modalData.name}}</view>
-                <view class="component" wx:if="{{modalData.component}}">
-                  {{modalData.component}}
-                </view>
-                <view class="modalDescribTitle">产品描述</view>
-                <view class="modalDescribText">{{modalData.foodDesc}}</view>
-                <view class="configMenu" wx:if="{{modalData.specs}}">
-                  <view class="configTitle">规格</view>
-                  <view wx:for="{{modalData.specs}}" wx:for-index="idx" wx:key="idx" wx:for-item="specsItem" data-item="{{specsItem}}" data-id="{{specsItem.foodSpecsId}}" data-index="{{index}}" class="selectConfigCard {{carSelectConfig.specs.foodSpecsId === specsItem.foodSpecsId ? 'select' : ''}}" bindtap="selectSpecs">
-                    <text>{{specsItem.foodSpecsName}}</text>
-                    <!-- <text wx:if="{{specsItem.recommend}}" class="icon">
+	<view class="home">
+		<!-- 门店信息 -->
+		<view class="guide {{showMore ? 'fullPageInfo' :''}}">
+			<view class="guideTop">
+				<view class="guideTopLeft" catchtap="goStoreList">
+					<text class="iconfont icon_star_empty"></text>
+					<text class="storeName">{{commercialName}}</text>
+					<text>></text>
+				</view>
+				<view class="guideTopRight">
+					<switchWithText width="160" height="60" activeText="自提" inactiveText="外卖" checked="{{checked}}" bind:changeChecked="changeChecked"></switchWithText>
+				</view>
+			</view>
+			<view class="distance">距离您{{distance}}km</view>
+			<view class="storeIntro">
+				<view class="storeDetails {{showMore ? 'hideDetail' : ''}}">
+					<!-- <text class="iconfont icon_light_bulb"></text> -->
+					<image class="icon_info" src="/images/tabBar/icon_info.png"></image>
+					<view class="oneHide">{{commercialDesc}}</view>
+				</view>
+				<view class="moreTxt" bindtap="showMoreDetail">
+					<text>{{detailBtnTxt}}</text>
+					<text class="iconfont icon-arrow-down {{showMore ? 'active' : ''}}"></text>
+				</view>
+			</view>
+			<view class="openStoreDetail {{showMore ? 'showDetail' : ''}}">
+				<view class="storeDetails">
+					<!-- <text class="iconfont icon_light_bulb"></text> -->
+					<view>{{commercialDesc}}</view>
+				</view>
+				<view class="storeDetailsTitle">配送</view>
+				<view>
+					<view>满30起送</view>
+				</view>
+			</view>
+		</view>
+		<view class="dishList" id="dishList">
+			<scroll-view scroll-y class="categoryList">
+				<view class="{{item.id === activeId ? 'active categoryItem' : 'categoryItem'}}" wx:for="{{dishMenuList}}" wx:key="id" bindtap="selectCategory" data-id="{{item.id}}" data-ac="{{activeId}}">
+					<!-- <text class="iconfont icon_light_bulb"></text> -->
+					<text>{{item.name}}</text>
+				</view>
+			</scroll-view>
+			<scroll-view scroll-y class="detailsList" scroll-into-view="{{scrollId}}" scroll-with-animation bindscroll="bindscroll">
+				<view wx:for="{{dishMenuList}}" wx:key="id" wx:for-index="pIndex" id="{{'dish' + item.id}}" class="dishMenuContent">
+					<view class="dishMenuItemTitle">{{item.name}}</view>
+					<view wx:for="{{item.foodList}}" wx:key="id" wx:for-item="childItem" class="dishMenuItem" catchtap="selectConfigMore" data-item="{{childItem}}">
+						<view class="img">
+							<image src="{{childItem.foodCover}}"></image>
+						</view>
+						<view class="dishDetails">
+							<view class="dishDetailsTitle">{{childItem.foodTitle}}</view>
+							<view class="dishDetailsSubTitle">{{childItem.foodDesc}}</view>
+							<view class="operate">
+								<text class="price">￥{{childItem.specs[0].originPrice}}</text>
+								<text class="selectCateInfo" wx:if="{{childItem.specs.length >= 1 && childItem.propertiesDto.length>=1}}" catchtap="onSelectConfigMore" data-item="{{childItem}}" data-parentIndex="{{pIndex}}">选规格</text>
+								<text class="iconfont icon_add_cir selectCate" wx:else catchtap="onSelectConfigMore" data-item="{{childItem}}" data-parentIndex="{{pIndex}}"></text>
+							</view>
+						</view>
+					</view>
+				</view>
+				<view class="catogoryBottom"></view>
+			</scroll-view>
+		</view>
+		<!-- 购物车信息 -->
+		<view class="cardMask" wx:if="{{cardMaskShow && cardList.length > 0}}">
+			<view class="cardMask2" bindtap="showCardDetail"></view>
+			<view class="cardDetailContent">
+				<view class="cardDetail">
+					<text class="iconfont icon_delete"></text>
+					<text class="btnClearCar" bindtap="clearCar">清空</text>
+				</view>
+				<view class="cardDetailList">
+					<view wx:for="{{cardList}}" wx:key="index" class="cardDetailListCard" wx:if="{{item.buyNum > 0}}">
+						<view class="cardDetailListCardLeft">
+							<view class="left">
+								<image class="img" src="{{item.foodCover}}" mode="aspectFill"></image>
+							</view>
+							<view class="right">
+								<view class="title">{{item.foodTitle}}</view>
+								<view class="num">{{item.foodProperties}}</view>
+								<view class="price">￥{{item.price}}</view>
+							</view>
+						</view>
+						<view class="cardDetailListCardRight">
+							<!-- <text>数量: {{item.buyNum}}</text> -->
+							<view class="addNum">
+								<text class="iconfont icon_reduce2" data-index="{{index}}" bindtap="reduceConfigNum2"></text>
+								<text class="addNumText">{{item.buyNum}}</text>
+								<text class="iconfont icon_add2" data-index="{{index}}" bindtap="addConfigNum2"></text>
+							</view>
+						</view>
+					</view>
+				</view>
+			</view>
+		</view>
+		<view class="cardList {{cardList.length > 0 ? 'show' : ''}}">
+			<view class="cardListLeft" bindtap="showCardDetail">
+				<view class="selectNum">
+					<image class="selectNumImg" src="{{cardList[0].foodCover}}" mode="aspectFill"></image>
+					<text class="number" wx:if="{{cardList.length > 0}}">{{selectInfo.total}}</text>
+				</view>
+				<view class="totalPrice">￥{{selectInfo.totalPrice}}</view>
+			</view>
+			<view class="cardListRight" bindtap="orderSettle">结算</view>
+		</view>
+	</view>
+	<!-- 规格模态框 -->
+	<view class="modal {{showModal ? 'showModal' : ''}}">
+		<view class="mask" bindtap="closeModal"></view>
+		<view class="modalView">
+			<view wx:if="{{!modalData.imgList}}" style="width: 100%;padding: 40rpx;box-sizing: border-box;">
+				<view style="width: 100%;">
+					<skeleton height="{{378}}"></skeleton>
+				</view>
+				<view style="width: 100%;margin-top: 30rpx;">
+					<skeleton row="{{3}}"></skeleton>
+				</view>
+			</view>
+			<block wx:else>
+				<view class="modalOperate">
+					<!-- <text class="iconfont icon_share"></text> -->
+					<text class="iconfont icon_close" bindtap="closeModal"></text>
+					<!-- <button class="button" open-type="share">分享</button> -->
+				</view>
+				<view class="position">{{current + 1}} / {{modalData.imgList.length}}</view>
+				<view class="modelContentShow">
+					<swiper bindchange="swprerChange">
+						<block wx:for="{{[modalData.foodCover]}}" wx:key="index">
+							<swiper-item>
+								<image src="{{item}}" mode="aspectFill"></image>
+							</swiper-item>
+						</block>
+					</swiper>
+					<view class="scrollView">
+						<scroll-view scroll-y>
+							<view class="scrollViewBox">
+								<view class="modalTitle">{{modalData.foodTitle}}</view>
+								<view class="component" wx:if="{{modalData.component}}">
+									{{modalData.component}}
+								</view>
+								<view class="modalDescribTitle">产品描述</view>
+								<view class="modalDescribText">{{modalData.foodDesc}}</view>
+								<view class="configMenu" wx:if="{{modalData.specs}}">
+									<view class="configTitle">规格</view>
+									<view wx:for="{{modalData.specs}}" wx:for-index="idx" wx:key="idx" wx:for-item="specsItem" data-item="{{specsItem}}" data-id="{{specsItem.foodSpecsId}}" data-index="{{index}}" class="selectConfigCard {{carSelectConfig.specs.foodSpecsId === specsItem.foodSpecsId ? 'select' : ''}}" bindtap="selectSpecs">
+										<text>{{specsItem.foodSpecsName}}</text>
+										<!-- <text wx:if="{{specsItem.recommend}}" class="icon">
                       <text class="iconfont icon_star"></text>
                     </text> -->
-                  </view>
-                </view>
-                <view wx:for="{{modalData.propertiesDto}}" wx:key="index" wx:for-item="configItem" class="configMenu">
-                  <view class="configTitle">{{configItem.name}}</view>
-                  <view wx:for="{{configItem.details}}" wx:for-index="idx" wx:key="idx" wx:for-item="detailItem" data-item="{{detailItem}}" data-itemparentname="{{configItem.name}}" data-id="{{detailItem.id}}" data-index="{{index}}" class="selectConfigCard {{carSelectConfig.propertiesDto[configItem.name] === detailItem.name ? 'select' : ''}}" bindtap="selectConfigCard">
-                    <text>{{detailItem.name}}</text>
-                    <text wx:if="{{detailItem.recommend}}" class="icon">
+									</view>
+								</view>
+								<view wx:for="{{modalData.propertiesDto}}" wx:key="index" wx:for-item="configItem" class="configMenu">
+									<view class="configTitle">{{configItem.name}}</view>
+									<view wx:for="{{configItem.details}}" wx:for-index="idx" wx:key="idx" wx:for-item="detailItem" data-item="{{detailItem}}" data-itemparentname="{{configItem.name}}" data-id="{{detailItem.id}}" data-index="{{index}}" class="selectConfigCard {{carSelectConfig.propertiesDto[configItem.name] === detailItem.name ? 'select' : ''}}" bindtap="selectConfigCard">
+										<text>{{detailItem.name}}</text>
+										<text wx:if="{{detailItem.recommend}}" class="icon">
                       <text class="iconfont icon_star"></text>
-                    </text>
-                  </view>
-                </view>
-                <view class="seatBox"></view>
-              </view>
-            </scroll-view>
-          </view>
-          <view class="cofigFooter">
-            <view class="priceDetail">
-              <view class="leftDetail">
-                <view class="price">￥{{carSelectConfig.price}}</view>
-                <view class="selectConfig">{{carSelectConfig.foodProperties}}</view>
-              </view>
-              <view class="addNum">
-                <text class="iconfont icon_reduce" bindtap="reduceConfigNum"></text>
-                <text class="addNumText">{{carSelectConfig.buyNum}}</text>
-                <text class="iconfont icon_add" bindtap="addConfigNum"></text>
-              </view>
-            </view>
-            <view class="addCar" bindtap="addCard">加入购物袋</view>
-          </view>
-        </view>
-      </block>
-    </view>
-  </view>
+										</text>
+									</view>
+								</view>
+								<view class="seatBox"></view>
+							</view>
+						</scroll-view>
+					</view>
+					<view class="cofigFooter">
+						<view class="priceDetail">
+							<view class="leftDetail">
+								<view class="price">￥{{carSelectConfig.price}}</view>
+								<view class="selectConfig">{{carSelectConfig.foodProperties}}</view>
+							</view>
+							<view class="addNum">
+								<text class="iconfont icon_reduce2" bindtap="reduceConfigNum"></text>
+								<text class="addNumText">{{carSelectConfig.buyNum}}</text>
+								<text class="iconfont icon_add2" bindtap="addConfigNum"></text>
+							</view>
+						</view>
+						<view class="btnBox">
+							<view class="addCar" bindtap="addCard">加入购物车</view>
+							<view class="cancelCar" bindtap="closeModal">取消</view>
+						</view>
+					</view>
+				</view>
+			</block>
+		</view>
+	</view>
 
-  <!-- 打烊弹窗 -->
-  <closingTime id="closingTime"></closingTime>
+	<!-- 打烊弹窗 -->
+	<closingTime id="closingTime"></closingTime>
 </view>
 <template is="closingTime" data="{{shopInfo}}"></template>
