--- a/client/wxapp/components/home/home.wxss
+++ b/client/wxapp/components/home/home.wxss
@@ -305,7 +305,7 @@
   height: 100%;
   z-index: 9999;
   background-color: rgba(0, 0, 0, 0.3);
-  padding: 80rpx 40rpx;
+  padding: 80rpx 30rpx;
   box-sizing: border-box;
   display: none;
 }
@@ -334,6 +334,7 @@
   border-radius: 14rpx;
   z-index: 10;
   display: flex;
+  height: 80%;
 }
 .modal .modalView .modalOperate {
   position: absolute;
@@ -346,19 +347,19 @@
 }
 .modal .modalView .modalOperate .iconfont {
   display: inline-block;
-  width: 56rpx;
-  height: 56rpx;
-  line-height: 56rpx;
+  width: 21rpx;
+  height: 21rpx;
+  line-height: 21rpx;
   text-align: center;
   border-radius: 28rpx;
-  background-color: rgba(0, 0, 0, 0.1);
-  color: #fff;
-  font-size: 24rpx;
+  background-color: #fff;
+  color: #8c8c8c;
+  font-size: 14rpx;
   font-weight: 700;
 }
 .modal .modalView swiper {
   width: 100%;
-  height: 378rpx;
+  height: 300rpx;
   box-sizing: border-box;
 }
 .modal .modalView .position {
@@ -415,9 +416,10 @@
   }
 }
 .modal .modalView .scrollView .modalTitle {
-  font-size: 32rpx;
+  font-size: 27rpx;
   font-weight: 700;
-  margin: 30rpx 0 10rpx 0;
+  margin: 30rpx 0 20rpx 0;
+  color: #343434;
 }
 .modal .modalView .scrollView .component {
   display: inline-block;
@@ -431,39 +433,49 @@
 }
 
 .modal .modalView .scrollView .modalDescribTitle {
-  margin-bottom: 20rpx;
+  margin-bottom: 10rpx;
 }
 .modal .modalView .scrollView .modalDescribText {
-  margin-bottom: 45rpx;
+  margin-bottom: 22rpx;
 }
 
 .modal .modalView .scrollView .modalDescribTitle,
 .modal .modalView .scrollView .modalDescribText,
 .modal .modalView .scrollView .configTitle {
-  font-size: 22rpx;
-  color: #9d9d9d;
+  font-size: 20.89rpx;
+  color: #919192;
+  line-height: 1.4;
 }
 .modal .modalView .scrollView .configMenu {
   margin-bottom: 30rpx;
 }
 .modal .modalView .scrollView .configMenu .configTitle {
   margin-bottom: 24rpx;
+  font-size: 14rpx;
+  color: #fff;
+  text-align: center;
+  width: 84rpx;
+  height: 28rpx;
+  background-color: #e7645c;
+  line-height: 28rpx;
+  border-radius: 14rpx;
 }
 .modal .modalView .scrollView .configMenu .selectConfigCard {
   display: inline-block;
-  height: 60rpx;
-  line-height: 60rpx;
+  height: 35rpx;
+  line-height: 35rpx;
   padding: 0 24rpx;
   border-radius: 6rpx;
-  background-color: #f5f5f6;
-  color: #000;
-  font-size: 22rpx;
+  background-color: transparent;
+  color: #707070;
+  font-size: 21rpx;
   margin-right: 20rpx;
   margin-bottom: 20rpx;
+  border: 1rpx solid #707070;
 }
 .modal .modalView .scrollView .configMenu .selectConfigCard.select {
-  background-color: #d3aa79;
-  color: #fff;
+  background-color: #d9d9d9;
+  color: #2f2f2f;
 }
 .modal .modalView .scrollView .configMenu .selectConfigCard .icon {
   display: inline-block;
@@ -499,48 +511,69 @@
   margin-top: 30rpx;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 26rpx;
+  margin-bottom: 50rpx;
 }
 .modal .modalView .cofigFooter .priceDetail .leftDetail .price {
-  font-size: 28rpx;
+  font-size: 31.43rpx;
   font-weight: 700;
-  color: #d1a672;
+  color: #2f2f2f;
 }
 .modal .modalView .cofigFooter .priceDetail .leftDetail .selectConfig {
   font-size: 22rpx;
   color: #acacac;
+  margin-top: 20rpx;
 }
 .modal .modalView .cofigFooter .priceDetail .addNum > text {
   vertical-align: middle;
 }
 .modal .modalView .cofigFooter .priceDetail .addNum .iconfont {
   display: inline-block;
-  border-radius: 25rpx;
-  font-size: 50rpx;
+  /* border-radius: 50%; */
+  font-size: 22rpx;
   text-align: center;
+  /* background-color: #adadae; */
+  color: #adadae;
 }
 .modal .modalView .cofigFooter .priceDetail .addNum .iconfont.icon_reduce {
-  color: #e0e0e0;
+  color: #fff;
 }
 .modal .modalView .cofigFooter .priceDetail .addNum .iconfont.icon_add {
-  color: #e8d4bb;
+  color: #fff;
 }
 .modal .modalView .cofigFooter .priceDetail .addNum .addNumText {
-  width: 68rpx;
+  width: 40rpx;
   display: inline-block;
   text-align: center;
-  color: #8c8c8c;
+  color: #919192;
+  font-size: 25rpx;
 }
-.modal .modalView .cofigFooter .addCar {
-  font-size: 26rpx;
-  color: #fff;
-  background-color: #d3aa79;
-  width: 100%;
-  height: 80rpx;
-  border-radius: 8rpx;
-  line-height: 80rpx;
+.modal .modalView .cofigFooter .btnBox{
+  width: 447rpx;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.modal .modalView .cofigFooter .btnBox>view{
+  width: 206rpx;
+  height: 50rpx;
+  line-height: 50rpx;
+  border-radius: 25rpx;
   text-align: center;
+  font-size: 30rpx;
 }
+
+
+.modal .modalView .cofigFooter .addCar {
+  background-color: #e7645c;
+  color: #fff;
+}
+
+.modal .modalView .cofigFooter .cancelCar {
+  background-color: #d1d2d4;
+  color: #3a3a3a;
+}
+
 /* 规格模态框 end */
 
 /* 购物车列表 start */
@@ -597,10 +630,17 @@
   background-color: #e7645c;
   color: #fff;
   border-radius: 24rpx;
-  margin-right: 25rpx;
+  margin-right: 35rpx;
 }
 .home .cardMask {
   position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.home .cardMask2 {
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
@@ -611,22 +651,51 @@
   position: absolute;
   width: 100%;
   bottom: 100rpx;
+  animation: ani_closingTime 0.5s linear both;
 }
+
+@keyframes ani_closingTime{
+  0%{ transform: translateY(400rpx);}
+  100%{ transform: translateY(0);}
+}
+.home .cardMask .cardDetailContent .icon_close{
+
+}
+
+
 .home .cardMask .cardDetailContent .cardDetail {
   height: 75rpx;
   font-size: 22rpx;
   color: #909090;
   line-height: 75rpx;
   padding-left: 30rpx;
-  background-color: #f7f7f7;
+  background-color: #f6f6f6;
+  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 .home .cardMask .cardDetailContent .cardDetail .iconfont {
   font-size: 22rpx;
   margin-right: 6rpx;
+  display: none;
 }
+.home .cardMask .cardDetailContent .cardDetail .btnClearCar{
+  width: 85rpx;
+  height: 28rpx;
+  border-radius: 15rpx;
+  background-color: #e7645c;
+  text-align: center;
+  line-height: 28rpx;
+  color: #fff;
+  font-size: 15rpx;
+  display: inline-block;
+  margin-right: 31rpx;
+}
+
 .home .cardMask .cardDetailContent .cardDetailList {
-  background-color: #fff;
-  padding: 17rpx 30rpx;
+  background-color: #f6f6f6;
+  padding: 17rpx 30rpx 50rpx;
 }
 .home .cardMask .cardDetailContent .cardDetailList > view:not(:first-child) {
   margin-top: 17rpx;
@@ -634,7 +703,66 @@
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft {
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+  width: 585rpx;
+} 
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft .left{
+  width: 140rpx;
+  height: 140rpx;
+  margin-right: 25rpx;
+}
+
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft .left .img{
+  width: 100%;
+  height: 100%;
+}
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft .right .title{
+  font-size: 27rpx;
+  color: #343434;
+  font-weight: 700;
+}
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft .right .num{
+  margin:25rpx 0 40rpx 0;
+  font-size: 22rpx;
+  color: #919192;
+}
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft .right .price{
+  font-size: 31rpx;
+  color: #2f2f2f;
+  font-weight: 700;
+}
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard .cardDetailListCardRight  .addNum > text {
+  vertical-align: middle;
+}
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard .cardDetailListCardRight  .addNum .iconfont {
+  display: inline-block;
+  font-size: 22rpx;
+  text-align: center;
+  color: #adadae;
+}
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard .cardDetailListCardRight  .addNum .iconfont.icon_reduce {
+  color: #fff;
+}
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard .cardDetailListCardRight  .addNum .iconfont.icon_add {
+  color: #fff;
+}
+.home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard .cardDetailListCardRight  .addNum .addNumText {
+  width: 40rpx;
+  display: inline-block;
+  text-align: center;
+  color: #919192;
+  font-size: 25rpx;
+}
+
+
+
+
+
 .home
   .cardMask
   .cardDetailContent
@@ -689,3 +817,5 @@
 .button::after {
   border: none;
 }
+
+.hide{display:none;}
