--- a/client/wxapp/common/css/common.wxss
+++ b/client/wxapp/common/css/common.wxss
@@ -207,16 +207,45 @@ button.button-hover {background-color: transparent;}
 .color3{color: #e7645c;}
 
 
-
-
-
-
-
-
-
-
-
-
+page{
+  --black: #000;
+  --white: #fff;
+  --color1: #343434;
+  --color2: #7d7d7d;
+  --color3: #e7645c;
+  --color4: #919192;
+  --color5: #9e9e9e;
+  --color6: #f6f6f6;
+  --color7: #2f2f2f;
+  --color8: #adadae;
+  --color9: #8c8c8c;
+  --color10: #c9c9c9;
+  --color11: #707070;
+  --color12: #d9d9d9;
+  --color13: #d3aa79;
+  --color14: #fbeba1;
+  --color15: #f1f1f1;
+  --color16: #acacac;
+  --color17: #d1d2d4;
+  --color18: #3a3a3a;
+  --color19: #e7e7e7;
+  --color20: #303030;
+  --color21: #909090;
+  --color22: #929292;
+  --color23: #eaeaea;
+  --color24: #f7f7f7;
+  --color25: #262626;
+  --color26: #aaaaaa;
+  --color27: #191919;
+  --color28: #808080;
+  --color29: #838383;
+  --color30: #f5f5f6;
+  --color31: #737373;
+  --color32: #cccaca;
+  --color33: #363a3d;
+  --color34: #e6e6e6;
+  --color35: #cccccc;
+}
 
 
 
