--- a/client/wxapp/components/home/home.wxss
+++ b/client/wxapp/components/home/home.wxss
@@ -26,7 +26,7 @@
 
 .guide {
   padding: 10rpx 38rpx 0 30rpx;
-  border-bottom: 1rpx solid #919192;
+  border-bottom: 1rpx solid var(--color4);
 }
 
 .guide.fullPageInfo {
@@ -60,13 +60,13 @@
 }
 
 .guide .distance {
-  color: #919192;
+  color: var(--color4);
   font-size: 24.37rpx;
   margin: 4rpx 0 35rpx 0;
 }
 
 .guide .storeIntro {
-  color: #919192;
+  color: var(--color4);
   font-size: 24rpx;
   height: 60rpx;
 }
@@ -99,7 +99,7 @@
   float: right;
   width: 118rpx;
   font-size: 22rpx;
-  color: #919192;
+  color: var(--color4);
   padding: 0 10rpx 0 25rpx;
   box-sizing: border-box;
   vertical-align: middle;
@@ -119,7 +119,7 @@
 
 .guide .openStoreDetail {
   font-size: 20rpx;
-  color: #9e9e9e;
+  color: var(--color5);
   display: none;
   transition: all 200ms;
 }
@@ -142,7 +142,7 @@
   font-size: 26rpx;
   font-weight: 700;
   margin: 20rpx 0;
-  color: #000;
+  color: var(--black);
 }
 
 /* 门店信息 end */
@@ -158,7 +158,7 @@
   width: 160rpx;
   height: 100%;
   max-height: 100%;
-  background-color: #f6f6f6;
+  background-color: var(--color6);
 }
 
 .dishList .categoryList .categoryItem {
@@ -172,10 +172,10 @@
 }
 
 .dishList .categoryList .categoryItem.active {
-  background-color: #fff;
+  background-color: var(--white);
 }
 .dishList .categoryList .categoryItem.active text{
-  color: #000;
+  color: var(--black);
 }
 
 .dishList .categoryList .categoryItem.active::before {
@@ -185,7 +185,7 @@
   left: 0;
   width: 8rpx;
   height: 100%;
-  background-color: #e7645c;
+  background-color: var(--color3);
 }
 
 .dishList .categoryList .categoryItem .iconfont {
@@ -196,7 +196,7 @@
 }
 
 .dishList .categoryList .categoryItem text {
-  color: #7d7d7d;
+  color: var(--color2);
   font-size: 24.9rpx;
   line-height: 32rpx;
   vertical-align: middle;
@@ -220,7 +220,7 @@
 }
 
 .dishList .detailsList .dishMenuItemTitle {
-  color: #919192;
+  color: var(--color4);
   font-size: 24rpx;
   margin-bottom: 60rpx;
   padding-left: 20px;
@@ -252,12 +252,12 @@
   font-size: 29rpx;
   font-weight: 700;
   margin-bottom: 25rpx;
-  color: #343434;
+  color: var(--color1);
 }
 
 .dishList .detailsList .dishMenuItem .dishDetails .dishDetailsSubTitle {
   font-size: 20.89rpx;
-  color: #919192;
+  color: var(--color4);
   display: -webkit-box;
   word-break: break-all;
   text-overflow: ellipsis;
@@ -276,20 +276,20 @@
 .dishList .detailsList .dishMenuItem .dishDetails .operate .price {
   font-size: 31.43rpx;
   font-weight: 700;
-  color: #2f2f2f;
+  color: var(--color7);
 }
 
 .dishList .detailsList .dishMenuItem .dishDetails .operate .selectCate {
   float: right;
-  color: #adadae;
+  color: var(--color8);
 }
 
 .dishList .detailsList .dishMenuItem .dishDetails .operate .selectCateInfo{
   float: right;
-  color: #fff;
+  color: var(--white);
   width: 48rpx;
   height: 22rpx;
-  background-color: #e7645c;
+  background-color: var(--color3);
   border-radius: 11rpx;
   text-align: center;
   line-height: 22rpx;
@@ -330,7 +330,7 @@
   /* width: 100%; */
   max-height: 100%;
   overflow: hidden;
-  background-color: #fff;
+  background-color: var(--white);
   border-radius: 14rpx;
   z-index: 10;
   display: flex;
@@ -352,8 +352,8 @@
   line-height: 21rpx;
   text-align: center;
   border-radius: 28rpx;
-  background-color: #fff;
-  color: #8c8c8c;
+  background-color: var(--white);
+  color: var(--color9);
   font-size: 14rpx;
   font-weight: 700;
 }
@@ -372,7 +372,7 @@
   line-height: 34rpx;
   border-radius: 15rpx;
   background-color: rgba(0, 0, 0, 0.1);
-  color: #fff;
+  color: var(--white);
   font-size: 22rpx;
 }
 .modal .modalView .modelContentShow {
@@ -419,15 +419,15 @@
   font-size: 27rpx;
   font-weight: 700;
   margin: 30rpx 0 20rpx 0;
-  color: #343434;
+  color: var(--color1);
 }
 .modal .modalView .scrollView .component {
   display: inline-block;
   height: 34rpx;
   line-height: 34rpx;
   padding: 0 8rpx;
-  background-color: #f6f6f6;
-  color: #c9c9c9;
+  background-color: var(--color6);
+  color: var(--color10);
   font-size: 20rpx;
   margin-bottom: 14rpx;
 }
@@ -443,7 +443,7 @@
 .modal .modalView .scrollView .modalDescribText,
 .modal .modalView .scrollView .configTitle {
   font-size: 20.89rpx;
-  color: #919192;
+  color: var(--color4);
   line-height: 1.4;
 }
 .modal .modalView .scrollView .configMenu {
@@ -452,11 +452,11 @@
 .modal .modalView .scrollView .configMenu .configTitle {
   margin-bottom: 24rpx;
   font-size: 14rpx;
-  color: #fff;
+  color: var(--white);
   text-align: center;
   width: 84rpx;
   height: 28rpx;
-  background-color: #e7645c;
+  background-color: var(--color3);
   line-height: 28rpx;
   border-radius: 14rpx;
 }
@@ -467,15 +467,15 @@
   padding: 0 24rpx;
   border-radius: 6rpx;
   background-color: transparent;
-  color: #707070;
+  color: var(--color11);
   font-size: 21rpx;
   margin-right: 20rpx;
   margin-bottom: 20rpx;
-  border: 1rpx solid #707070;
+  border: 1rpx solid var(--color11);
 }
 .modal .modalView .scrollView .configMenu .selectConfigCard.select {
-  background-color: #d9d9d9;
-  color: #2f2f2f;
+  background-color: var(--color12);
+  color: var(--color7);
 }
 .modal .modalView .scrollView .configMenu .selectConfigCard .icon {
   display: inline-block;
@@ -488,7 +488,7 @@
   top: -24rpx;
   right: -6rpx;
   font-size: 22rpx;
-  color: #d3aa79;
+  color: var(--color13);
 }
 .modal
   .modalView
@@ -497,14 +497,14 @@
   .selectConfigCard.select
   .icon
   .icon_star {
-  color: #fbeba1;
+  color: var(--color14);
 }
 
 .modal .modalView .cofigFooter {
   width: 100%;
   height: 225rpx;
   box-sizing: border-box;
-  border-top: 2rpx solid #f1f1f1;
+  border-top: 2rpx solid var(--color15);
   padding: 0 40rpx;
 }
 .modal .modalView .cofigFooter .priceDetail {
@@ -516,11 +516,11 @@
 .modal .modalView .cofigFooter .priceDetail .leftDetail .price {
   font-size: 31.43rpx;
   font-weight: 700;
-  color: #2f2f2f;
+  color: var(--color7);
 }
 .modal .modalView .cofigFooter .priceDetail .leftDetail .selectConfig {
   font-size: 22rpx;
-  color: #acacac;
+  color: var(--color16);
   margin-top: 20rpx;
 }
 .modal .modalView .cofigFooter .priceDetail .addNum > text {
@@ -531,20 +531,20 @@
   /* border-radius: 50%; */
   font-size: 22rpx;
   text-align: center;
-  /* background-color: #adadae; */
-  color: #adadae;
+  /* background-color: var(--color8); */
+  color: var(--color8);
 }
 .modal .modalView .cofigFooter .priceDetail .addNum .iconfont.icon_reduce {
-  color: #fff;
+  color: var(--white);
 }
 .modal .modalView .cofigFooter .priceDetail .addNum .iconfont.icon_add {
-  color: #fff;
+  color: var(--white);
 }
 .modal .modalView .cofigFooter .priceDetail .addNum .addNumText {
   width: 40rpx;
   display: inline-block;
   text-align: center;
-  color: #919192;
+  color: var(--color4);
   font-size: 25rpx;
 }
 .modal .modalView .cofigFooter .btnBox{
@@ -565,13 +565,13 @@
 
 
 .modal .modalView .cofigFooter .addCar {
-  background-color: #e7645c;
-  color: #fff;
+  background-color: var(--color3);
+  color: var(--white);
 }
 
 .modal .modalView .cofigFooter .cancelCar {
-  background-color: #d1d2d4;
-  color: #3a3a3a;
+  background-color: var(--color17);
+  color: var(--color18);
 }
 
 /* 规格模态框 end */
@@ -585,7 +585,7 @@
   display: flex;
   transition: bottom 200ms;
   z-index: 20;
-  background-color: #e7e7e7;
+  background-color: var(--color19);
   align-items: center;
 }
 .home .cardList.show {
@@ -593,7 +593,7 @@
 }
 .home .cardList .cardListLeft {
   flex: 1;
-  background-color: #e7e7e7;
+  background-color: var(--color19);
   height: 100rpx;
   display: flex;
   justify-content: start;
@@ -607,16 +607,16 @@
   height: 60rpx;
   line-height: 60rpx;
   text-align: center;
-  background-color: #d3aa79;
+  background-color: var(--color13);
   border-radius: 30rpx; */
-  color: #fff;
+  color: var(--white);
   margin-top: -15rpx;
 }
 .home .cardList .cardListLeft .selectNum .selectNumImg{width: 105rpx;height: 105rpx;border-radius: 20rpx;}
-.home .cardList .cardListLeft .selectNum  .number{font-size: 18rpx;color: #fff;width: 23rpx;height: 23rpx;border-radius: 50%;background-color: #e7645c;text-align: center;line-height: 23rpx;isplay: block;position: absolute;top: -12rpx;right: -12rpx;}
+.home .cardList .cardListLeft .selectNum  .number{font-size: 18rpx;color: var(--white);width: 23rpx;height: 23rpx;border-radius: 50%;background-color: var(--color3);text-align: center;line-height: 23rpx;isplay: block;position: absolute;top: -12rpx;right: -12rpx;}
 
 .home .cardList .cardListLeft .totalPrice {
-  color: #303030;
+  color: var(--color20);
   font-size: 30.25rpx;
   margin-left: 30rpx;
 }
@@ -627,8 +627,8 @@
   height: 50rpx;
   line-height: 50rpx;
   text-align: center;
-  background-color: #e7645c;
-  color: #fff;
+  background-color: var(--color3);
+  color: var(--white);
   border-radius: 24rpx;
   margin-right: 35rpx;
 }
@@ -666,10 +666,10 @@
 .home .cardMask .cardDetailContent .cardDetail {
   height: 75rpx;
   font-size: 22rpx;
-  color: #909090;
+  color: var(--color21);
   line-height: 75rpx;
   padding-left: 30rpx;
-  background-color: #f6f6f6;
+  background-color: var(--color6);
   text-align: right;
   display: flex;
   justify-content: flex-end;
@@ -684,17 +684,17 @@
   width: 85rpx;
   height: 28rpx;
   border-radius: 15rpx;
-  background-color: #e7645c;
+  background-color: var(--color3);
   text-align: center;
   line-height: 28rpx;
-  color: #fff;
+  color: var(--white);
   font-size: 15rpx;
   display: inline-block;
   margin-right: 31rpx;
 }
 
 .home .cardMask .cardDetailContent .cardDetailList {
-  background-color: #f6f6f6;
+  background-color: var(--color6);
   padding: 17rpx 30rpx 50rpx;
 }
 .home .cardMask .cardDetailContent .cardDetailList > view:not(:first-child) {
@@ -723,17 +723,17 @@
 }
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft .right .title{
   font-size: 27rpx;
-  color: #343434;
+  color: var(--color1);
   font-weight: 700;
 }
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft .right .num{
   margin:25rpx 0 40rpx 0;
   font-size: 22rpx;
-  color: #919192;
+  color: var(--color4);
 }
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCardLeft .right .price{
   font-size: 31rpx;
-  color: #2f2f2f;
+  color: var(--color7);
   font-weight: 700;
 }
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard .cardDetailListCardRight  .addNum > text {
@@ -743,19 +743,19 @@
   display: inline-block;
   font-size: 22rpx;
   text-align: center;
-  color: #adadae;
+  color: var(--color8);
 }
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard .cardDetailListCardRight  .addNum .iconfont.icon_reduce {
-  color: #fff;
+  color: var(--white);
 }
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard .cardDetailListCardRight  .addNum .iconfont.icon_add {
-  color: #fff;
+  color: var(--white);
 }
 .home .cardMask .cardDetailContent .cardDetailList .cardDetailListCard .cardDetailListCardRight  .addNum .addNumText {
   width: 40rpx;
   display: inline-block;
   text-align: center;
-  color: #919192;
+  color: var(--color4);
   font-size: 25rpx;
 }
 
@@ -781,7 +781,7 @@
   .cardDetailListCardLeft
   > view:nth-child(2) {
   font-size: 22rpx;
-  color: #929292;
+  color: var(--color22);
 }
 .home
   .cardMask
@@ -790,7 +790,7 @@
   .cardDetailListCard
   .cardDetailListCardRight {
   font-size: 24rpx;
-  color: #929292;
+  color: var(--color22);
   display: flex;
   align-items: center;
 }
