--- a/client/wxapp/common/css/common.wxss
+++ b/client/wxapp/common/css/common.wxss
@@ -103,12 +103,12 @@ button.button-hover {background-color: transparent;}
 /*********在线字体代码start*********/
 @font-face {
   font-family: 'iconfont';  /* project id 1683578 */
-  src: url('//at.alicdn.com/t/font_1683578_kfvbl0ksted.eot');
-  src: url('//at.alicdn.com/t/font_1683578_kfvbl0ksted.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1683578_kfvbl0ksted.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1683578_kfvbl0ksted.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1683578_kfvbl0ksted.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1683578_kfvbl0ksted.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_1683578_7xm89b0ywmt.eot');
+  src: url('//at.alicdn.com/t/font_1683578_7xm89b0ywmt.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1683578_7xm89b0ywmt.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1683578_7xm89b0ywmt.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1683578_7xm89b0ywmt.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1683578_7xm89b0ywmt.svg#iconfont') format('svg');
 }
 
 /*********在线字体代码end*********/
@@ -185,6 +185,13 @@ button.button-hover {background-color: transparent;}
   content:'\e7a4';
 }
 
+.icon_shop::before{
+  content:'\e625';
+}
+.icon_car::before{
+  content:'\e66e';
+}
+
 /* commonDiolag */
 .commonDiolag{background-color: rgba(0,0,0,0.2);width: 100%;height: 100%;position: absolute;top: 0;left: 0;z-index: 99;}
 /* closingTime*/
@@ -245,9 +252,13 @@ page{
   --color33: #363a3d;
   --color34: #e6e6e6;
   --color35: #cccccc;
+  --color40: #404040;
+  --color41: #404040;
+  --color42: #626262;
+  --color43: #a3a3a3;
 }
 
-
+.hide{display: none!important;}
 
 
 
