--- a/client/wxapp/pages/receiveAddress/receiveAddress.wxss
+++ b/client/wxapp/pages/receiveAddress/receiveAddress.wxss
@@ -50,15 +50,19 @@ page{width: 100%;height: 100%;}
 /* 底部 e */
 
 /* listBox*/
-.listBox{height: calc(100% - 176rpx);}
+.listBox{height: calc(100% - 233rpx);}
 .listBox .flexBox{display: flex;justify-content: space-between;align-items: center;} 
 .listBox .listBoxScroll{height: 100%;width: 100%;}
-.listBox .listBoxScroll .box{height: 100%;padding-top: 76rpx;box-sizing: border-box;}
-.listBox .listBoxScroll .listItem {padding: 0 60rpx 0 30rpx;background-color: #ffffff;margin-bottom: 35rpx;}
+.listBox .listBoxScroll .box{height: 100%;box-sizing: border-box;}
+.listBox .listBoxScroll .listItem {width: 718rpx;margin: 0 auto 30rpx; padding: 0 27rpx;background-color: var(--color24);}
 .listBox .listBoxScroll .listItem::before{content: '';width: 100%;height: 2rpx;background-color: #fff;position: absolute;bottom: 0;left: 0;}
-.listBox .listBoxScroll .listItem .left{width: 627rpx;height: 100%; box-sizing: border-box;padding: 30rpx 0;font-size: 30rpx;}
+.listBox .listBoxScroll .listItem .left{width: 530rpx;height: 100%; box-sizing: border-box;padding: 20rpx 0;}
+.listBox .listBoxScroll .listItem .left .txt{font-size: 30rpx;color: var(--color40);}
+.listBox .listBoxScroll .listItem .left .txt text{line-height: 1.4;}
 .listBox .listBoxScroll .listItem .left .txt:first-child{margin-bottom: 15rpx;}
-.listBox .listBoxScroll .listItem .left .txt text:last-child{margin-left: 15rpx;}
-.listBox .listBoxScroll .listItem .right{font-size: 26rpx;}
-.listBox .rightDel{height: 100%;width: 100rpx;display: flex;justify-content: center;align-items: center; background-color: #ee0a24;color: #fff;font-size: 30rpx;}
+.listBox .listBoxScroll .listItem .left .txt text:nth-child(2){margin-left: 15rpx;}
+.listBox .listBoxScroll .listItem .right{font-size: 23rpx;width: calc(100% - 530rpx);text-align: right;color: var(--color3);}
+.listBox .rightDel{height: 100%;width: 100rpx;display: flex;justify-content: center;align-items: center; background-color: var(--color3);color: #fff;font-size: 23rpx;}
 .listBox .rightDel::before{content: '';width: 100%;height: 2rpx;background-color: #fff;position: absolute;bottom: 0;left: 0;}
+
+.listBox .listBoxScroll .listItem .left .txt .btnDefault{display: inline-block;width: 93rpx;height: 39rpx;line-height: 39rpx;text-align: center;border-radius: 5rpx;border: 1rpx solid var(--color26);color: var(--color40);font-size: 20rpx;position: absolute;right: 0;top: 5rpx;}
