--- a/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxml
+++ b/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxml
@@ -12,7 +12,7 @@
 					<text wx:if="{{userOrderinfo.state == 7}}">已取消</text>
 					<text wx:if="{{userOrderinfo.state == 9}}">已退款</text>
 				</view>
-				<view class="foodCode" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 1}}">{{userOrderinfo.foodCode}}</view>
+				<view class="foodCode" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 1}}">{{userOrderinfo.fetchCode}}</view>
 				<view class="countDownBox" wx:if="{{userOrderinfo.state == 0 && userOrderinfo.payState == 0}}">
 					<van-count-down time="{{ time }}" bind:finish="finished" />后订单将自动取消</view>
 				<view class="guideTopRight" wx:if="{{userOrderinfo.state == 0 && userOrderinfo.payState == 0}}">
@@ -83,7 +83,7 @@
 				<view class="RunningMoney flexBox flexBox2" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 2}}">
 					<view class="left">取餐码</view>
 					<view class="right">
-						<text class="tips">{{userOrderinfo.foodCode}}</text>
+						<text class="tips">{{userOrderinfo.fetchCode}}</text>
 					</view>
 				</view>
 				<!-- 收货地址 -->
