--- a/client/wxapp/pages/orderSettle/orderSettle.wxml
+++ b/client/wxapp/pages/orderSettle/orderSettle.wxml
@@ -105,7 +105,7 @@
 			</view>
 		</view>
 	</scroll-view>
-	<view class="orderMoneyBox" wx:if="{{isOrderBox}}">
+	<view class="orderMoneyBox" wx:if="{{isOrderBox || !checked}}">
 		<view class="totalBox">
 			<text class="icon_money">总计￥{{selectInfo.allPrice}}</text>
 		</view>
